--- a/fermentpro/pubspec.yaml
+++ b/fermentpro/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.9
   animations: ^2.0.11
+  firebase_core: ^3.13.0
+  fl_chart: ^0.70.2
+  riverpod: ^2.6.1
+  http: ^1.3.0
 
 flutter_icons:
   android: true
