--- a/fermentpro/pubspec.yaml
+++ b/fermentpro/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fl_chart: ^0.70.2
   riverpod: ^2.6.1
   http: ^1.3.0
+  flutter_riverpod: ^2.6.1
 
 flutter_icons:
   android: true
