--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Generate Documentation
         run: |
-          cd / # Change to the directory containing the Doxyfile
+          cd projekt # Change to the directory containing the Doxyfile
           doxygen Doxyfile || { echo "Doxygen failed"; exit 1; }  # Run Doxygen, exit if it fails
           if [ ! -d "docs/html" ]; then echo "Error: docs/html not found!"; exit 1; fi  # Check if the HTML output directory exists
 
