--- a/fermentpro/pubspec.yaml
+++ b/fermentpro/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   flutter_svg: ^2.0.9
   animations: ^2.0.11
   firebase_core: ^3.13.0
-  fl_chart: ^0.70.2
+  fl_chart: ^1.0.0
   riverpod: ^2.6.1
   http: ^1.3.0
   flutter_riverpod: ^2.6.1
+  intl: ^0.20.2
+  table_calendar: ^3.2.0
 
 flutter_icons:
   android: true
